// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filed should render field label 1`] = `
<div>
  <div
    class="ucee-field"
  >
    <div
      class="ucee-field__label"
      style="width: 200px;"
    >
      <span>
        文本
      </span>
    </div>
    <div
      class="ucee-field__value ucee-field__right-clear"
    >
      <input
        class="ucee-field__control"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Filed should render leftIcon 1`] = `
<div>
  <div
    class="ucee-field"
  >
    <div
      class="ucee-field__left-icon"
    >
      <span>
        icon
      </span>
    </div>
    <div
      class="ucee-field__label"
    >
      <span />
    </div>
    <div
      class="ucee-field__value ucee-field__right-clear"
    >
      <input
        class="ucee-field__control"
        value=""
      />
    </div>
  </div>
</div>
`;
